fix(柜机导出)